syntax = "proto3";

package taskmanager.pb;

option go_package = "github.com/DiarmuidMalanaphy/Task-Manager/standards";
import "Verification.proto";
message RemoveTaskRequest {
	VerificationToken token = 1;
	uint64 TaskID = 2;
}

